chore: Java 21 build